--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+    "publisher": "BalduinLandolt",
     "name": "surround-with-tag",
-    "displayName": "surround-with-tag",
-    "description": "Surround with tag",
-    "version": "0.0.1",
+    "displayName": "Surround with Tag",
+    "description": "Surround selection with XML/HTML tag",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BalduinLandolt/vs-code-surround-with-tag.git"
+    },
+    "version": "0.1.0",
     "engines": {
         "vscode": "^1.43.0"
     },
