--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     },
     "devDependencies": {
         "@types/glob": "^7.1.1",
-        "@types/mocha": "^7.0.1",
-        "@types/node": "^12.11.7",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.18",
         "@types/vscode": "^1.43.0",
-        "eslint": "^6.8.0",
-        "@typescript-eslint/parser": "^2.18.0",
-        "@typescript-eslint/eslint-plugin": "^2.18.0",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
+        "eslint": "^8.9.0",
         "glob": "^7.1.6",
-        "mocha": "^7.0.1",
-        "typescript": "^3.7.5",
-        "vscode-test": "^1.3.0"
+        "mocha": "^9.2.1",
+        "typescript": "^4.5.5",
+        "@vscode/test-electron": "^1.3.0"
     }
 }
