--- a/package.json
+++ b/package.json
@@ -47,10 +47,14 @@
         "@types/vscode": "^1.43.0",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
+        "@vscode/test-electron": "^1.3.0",
         "eslint": "^8.9.0",
         "glob": "^7.1.6",
         "mocha": "^9.2.1",
-        "typescript": "^4.5.5",
-        "@vscode/test-electron": "^1.3.0"
+        "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "@vscode/emmet-helper": "^2.8.4",
+        "emmet": "^2.3.6"
     }
 }
