--- a/package.json
+++ b/package.json
@@ -38,19 +38,26 @@
         "lint": "eslint src --ext ts",
         "watch": "tsc -watch -p ./",
         "pretest": "npm run compile && npm run lint",
-        "test": "node ./out/test/runTest.js"
+        "test": "mocha -r ts-node/register src/**/*.spec.ts"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.0",
         "@types/glob": "^7.1.1",
         "@types/mocha": "^9.1.0",
         "@types/node": "^17.0.18",
         "@types/vscode": "^1.43.0",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
+        "@vscode/test-electron": "^1.3.0",
+        "chai": "^4.3.6",
         "eslint": "^8.9.0",
         "glob": "^7.1.6",
         "mocha": "^9.2.1",
-        "typescript": "^4.5.5",
-        "@vscode/test-electron": "^1.3.0"
+        "ts-node": "^10.5.0",
+        "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "@vscode/emmet-helper": "^2.8.4",
+        "emmet": "^2.3.6"
     }
 }
